[tool.poetry]
name = "dynamic-conf"
version = "0.5.1"
description = "Easy to manage Config variables separate from App code. Useful while developing and deploying( CI/CD) django web-apps"
authors = ["Noortheen Raja <jnoortheen@gmail.com>"]
license = "MIT"

readme = 'README.md'
repository = "https://github.com/jnoortheen/dynamic-conf"
homepage = "https://github.com/jnoortheen/dynamic-conf"

keywords = ['django', 'configuration', '12 factor settings']
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.6"
six = "^1.12"

[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-cov = "^2"
tox = "^3"
sniffer = "^0.4.1"
pyinotify = "^0.9.6"
ipython = "^7.13.0"

[tool.poetry.scripts]
dynamic-conf = 'dynamic_conf:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

