[project]
name = "dynamic-conf"
version = "1.0.1"
description = "Easy to manage Config variables separate from App code. Useful while developing and deploying( CI/CD) django web-apps"
authors = [{ name = "Noortheen Raja", email = "jnoortheen@gmail.com" }]
requires-python = "~=3.6"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "configuration",
    "12 factor settings",
]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["arger>=1.0.10,<2"]

[project.urls]
Homepage = "https://github.com/jnoortheen/dynamic-conf"
Repository = "https://github.com/jnoortheen/dynamic-conf"

[project.scripts]
dynamic-conf = "dynamic_conf:main"

[dependency-groups]
dev = [
    "pytest>=5,<6",
    "pytest-cov>=2,<3",
    "tox>=3,<4",
    "sniffer>=0.4.1,<0.5",
    "pyinotify>=0.9.6,<0.10",
    "ipython>=7.13.0,<8",
    "better-exceptions>=0.2.2,<0.3",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

